small update on readme

--- a/user_guide.ipynb
+++ b/user_guide.ipynb
@@ -136,7 +136,7 @@
    "source": [
     "# Define a cross validation object\n",
     "cv_class = asgl.CV(model=model, penalization=penalization, lambda1=lambda1, alpha=alpha,\n",
-    "                   nfolds=5, error_type=error_type, parallel=parallel, random_state=99)\n"
+    "                   nfolds=5, error_type=error_type, parallel=parallel, random_state=99)"
    ]
   },
   {
