--- a/user_guide.ipynb
+++ b/user_guide.ipynb
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have found that the cross validation error is minimized for the parameter values shown above. Now we will consder a final train / test split in which to train the model for the pair of optimal parameters obtained before and compute the final test error. For this, we define an ASGL object, that is used to fit the model with no cross validation involved."
+    "We have found that the cross validation error is minimized for the parameter values shown above. Now we will consider a final train / test split in which to train the model for the pair of optimal parameters obtained before and compute the final test error. For this, we define an ASGL object, that is used to fit the model with no cross validation involved."
    ]
   },
   {
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "75"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,6 +873,76 @@
     "`alpha=np.r_[np.arange(0.0, 0.3, 0.02), np.arange(0.3, 0.7, 0.1), np.arange(0.7, 0.99, 0.02)]`\n",
     "\n",
     "* $\\gamma_1$ and $\\gamma_2$: These parameters are the powers applied to weights in adaptive penalizations. Usually, these are defined in the interval $[0, 2]$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Main functions on the package\n",
+    "\n",
+    "There are three main functions in this package:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `asgl.ASGL.fit`\n",
+    "This function is used for fitting any model (unpenalized or penalized) on a dataset. Input parameter values of this function are:\n",
+    "\n",
+    "* `model`: model to be fit (accepts `'lm'` or `'qr'`)\n",
+    "* `penalization`: penalization to use (accepts `None`, `'lasso'`, `'gl'`, `'sgl'`, `'asgl'`, `'asgl_lasso'`, `'asgl_gl'`)\n",
+    "* `intercept`: boolean, wheter to fit the model including intercept or not\n",
+    "* `tol`:  tolerance for a coefficient in the model to be considered as 0\n",
+    "* `lambda1`: parameter value that controls the level of shrinkage applied on penalizations\n",
+    "* `alpha`: parameter value, tradeoff between lasso and group lasso in sgl penalization\n",
+    "* `tau`: quantile level in quantile regression models\n",
+    "* `lasso_weights`: lasso weights in adaptive penalizations\n",
+    "* `gl_weights`: group lasso weights in adaptive penalizations\n",
+    "* `parallel`: boolean, wheter to execute the code in parallel or sequentially\n",
+    "* `num_cores`: if parallel is set to true, the number of cores to use in the execution. Default is (max - 1)\n",
+    "* `solver`: solver to be used by CVXPY. Default uses optimal alternative depending on the problem\n",
+    "* `max_iters`: CVXPY parameter. Default is 500\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `asgl.WEIGHTS.fit`\n",
+    "\n",
+    "This function is used for fitting weights used later by adaptive penalizations. Input parameter values of this function are:\n",
+    "\n",
+    "* `model`: model to be fit using these weights (accepts `'lm'` or `'qr'`)\n",
+    "* `penalization`: penalization to use (`'asgl'`, `'asgl_lasso'`, `'asgl_gl'`)\n",
+    "* `tau`: quantile level in quantile regression models\n",
+    "* `weight_technique`: weight technique to use for fitting the adaptive weights. Accepts `'pca_1'`, `'pca_pct'`, `'pls_1'`, `'pls_pct'`, `'unpenalized_lm'`, `'unpenalized_qr'`, `'spca'`\n",
+    "* `weight_tol`: Tolerance value used for avoiding ZeroDivision errors\n",
+    "* `lasso_power_weight`: parameter value, power at which the lasso weights are risen. Default is 1\n",
+    "* `gl_power_weight`: parameter value, power at which the group lasso weights are risen. Default is 1\n",
+    "* `variability_pct`: parameter value, percentage of variability explained by pca or pls components used in `'pca_pct'`, `'pls_pct'` and `'spca'`. Default is 0.9 (90%)\n",
+    "* `spca_alpha`: sparse PCA parameter. Default is $10^{-5}$\n",
+    "* `spca_ridge_alpha`: sparse PCA parameter. Default is $10^{-2}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `asgl.CV.cross_validation`\n",
+    "\n",
+    "This function performs cross validation over a dataset in order to obtain optimal parameter values for a model. Input parameter values of this function are:\n",
+    "\n",
+    "* All the parameters described for `asgl.ASGL.fit` and `asgl.WEIGHTS.fit` methods\n",
+    "* `error_type`: error measurement to use. Accepts:\n",
+    "   * `'MSE'`: mean squared error\n",
+    "   * `'MAE'`: mean absolute error\n",
+    "   * `'MDAE'`: mean absolute deviation error\n",
+    "   * `'QRE'`: quantile regression error\n",
+    "* `random_state`: random state value in case reproducible data splits are required\n",
+    "* `nfolds`: number of folds in which the dataset should be split. Default value is 5\n",
+    "\n"
    ]
   }
  ],
