--- a/user_guide.ipynb
+++ b/user_guide.ipynb
@@ -580,17 +580,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Adaptive sparse group lasso\n",
+    "#### Adaptive lasso\n",
     "\n",
     "The adaptive idea was initially proposed by Zou in 2006 [(original paper)](http://users.stat.umn.edu/~zouxx019/Papers/adalasso.pdf) for an adaptive lasso. This idea is based on the usage of additional weights on the penalization as a way to reduce bias and increase the quality of variable selection and prediction accuracy. This way, adaptive lasso is defined as,\n",
     "\n",
     "$$ \\min R(\\beta) + \\lambda\\sum_{i=1}^p\\tilde{w_i}|\\beta_i|$$\n",
     "\n",
-    "where $\\tilde{w_i}$ are weights previously provided by the researcher. Adaptive group lasso is defined as,\n",
+    "where $\\tilde{w_i}$ are weights previously provided by the researcher. This penalization can be fit by defining,\n",
+    "\n",
+    "* `penalization='alasso'` where sgl refers to sparse group lasso\n",
+    "* `lambda1 = [0.001, 0.01, 0.1, 1, 10]`, where $\\lambda$ is the parameter defined in the lasso penalization\n",
+    "* `lasso_weights=np.repeat(0.5, 13)`. Here, `lasso_weights` refers to $\\tilde{w}$, and it should be of the same length as the number of predictors in X (the number of columns in X, in this case 13)\n",
+    "\n",
+    "As it happended with parameters $\\lambda$ and $\\alpha$, it can be interesting to fit models for different weight values. This can be easily done by simply storing all the weight candidates into a list. For example,\n",
+    "\n",
+    "`lasso_weights=[np.repeat(0.5, 13), np.repeat(0.75, 13), np.repeat(1, 13)]`\n",
+    "\n",
+    "would fit models for the three candidate values of the lasso weights. We will see how to fit this assuming that we know some potential values for $\\tilde{w_i}$ (we will discuss later how those can be obtained)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda1 = [0.001, 0.01, 0.1, 1, 10]\n",
+    "lasso_weights = [np.repeat(0.5, 13), np.repeat(0.75, 13), np.repeat(1, 13)]\n",
+    "alasso_model = asgl.ASGL(model='lm', penalization='alasso',lambda1=lambda1, \n",
+    "                       lasso_weights=lasso_weights, parallel=True)\n",
+    "alasso_model.fit(x=x, y=y)\n",
+    "coef = asgl_model.coef_\n",
+    "len(coef)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Adaptive group lasso\n",
+    "\n",
+    "In a similar way, adaptive group lasso is defined as,\n",
     "\n",
     "$$ \\min R(\\beta) +\\lambda \\sum_{l=1}^{K} \\sqrt{p_{l}}\\tilde{v_l}\\left\\|\\beta^{(l)}\\right\\|_{2}$$\n",
     "\n",
-    "where $\\tilde{v_l}$ are also additional weights, and the sparse group lasso is defined as,\n",
+    "where $\\tilde{v_l}$ are also additional weights. This penalization can be fit by defining,\n",
+    "\n",
+    "* `penalization='agl'` where sgl refers to sparse group lasso\n",
+    "* `lambda1 = [0.001, 0.01, 0.1, 1, 10]`, where $\\lambda$ is the parameter defined in the lasso penalization\n",
+    "* `group_index=np.array([1, 1, 1, 2, 2, 2, 1, 1, 1, 2, 2, 2, 2])`, as described in the group lasso.\n",
+    "* `gl_weights=np.repeat(1.5, 2)`. Here `gl_weights` refers to $\\tilde{v}$ and it should be of the same length as the number of groups considered in `group_index` (in this case, 2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda1 = [0.001, 0.01, 0.1, 1, 10]\n",
+    "group_index = np.array([1, 1, 1, 2, 2, 2, 1, 1, 1, 2, 2, 2, 2])\n",
+    "\n",
+    "gl_weights = [np.repeat(0.5, 2), np.repeat(0.7, 2), np.repeat(1.3, 2)]\n",
+    "agl_model = asgl.ASGL(model='lm', penalization='agl',lambda1=lambda1, \n",
+    "                       gl_weights=gl_weights, parallel=True)\n",
+    "agl_model.fit(x=x, y=y, group_index=group_index)\n",
+    "coef = asgl_model.coef_\n",
+    "len(coef)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Adaptive sparse group lasso\n",
+    "\n",
+    "Finally, just like it happened when we saw the sgl definition, adaptive saprse group lasso is defined as a linear combination of adaptive lasso and adaptive group lasso,\n",
     "\n",
     "$$R({\\beta})+\\alpha\\lambda\\sum_{j=1}^p\\tilde{w}_j\\lvert\\beta_j\\rvert+(1-\\alpha)\\lambda\\sum_{l=1}^K\\sqrt{p_l}\\tilde{v_l}\\left\\|\\beta^{(l)}\\right\\|_{2}$$\n"
    ]
@@ -614,19 +701,13 @@
     "* `lambda1 = [0.001, 0.01, 0.1, 1, 10]`, where $\\lambda$ is the parameter defined in the lasso penalization\n",
     "* `alpha=[0, 0.25, 0.5, 0.75, 1]`, where $\\alpha$ is the parameter described for the sparse group lasso penalization\n",
     "* `group_index=np.array([1, 1, 1, 2, 2, 2, 1, 1, 1, 2, 2, 2, 2])`, as described in the group lasso.\n",
-    "* `lasso_weights=np.repeat(0.5, 13)`. Here, `lasso_weights` refers to $\\tilde{w}$, and it should be of the same length as the number of predictors in X (the number of columns in X, in this case 13)\n",
-    "* `gl_weights=np.repeat(1.5, 2)`. Here `gl_weights` refers to $\\tilde{v}$ and it should be of the same length as the number of groups considered in `group_index` (in this case, 2)\n",
-    "\n",
-    "As it happended with parameters $\\lambda$ and $\\alpha$, it can be interesting to fit models for different weight values. This can be easily done by simply storing all the weight candidates into a list. For example,\n",
-    "\n",
-    "`lasso_weights=[np.repeat(0.5, 13), np.repeat(0.75, 13), np.repeat(1, 13)]`\n",
-    "\n",
-    "would fit models for the three candidate values of the lasso weights."
+    "* `lasso_weights = [np.repeat(0.5, 13), np.repeat(0.75, 13), np.repeat(1, 13)]` where `lasso_weights` is the parameter defined for the \n",
+    "* `gl_weights=np.repeat(1.5, 2)`. where `gl_weights` is the parameter defined for adaptive group lasso."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +716,7 @@
        "75"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,6 +772,7 @@
     "\n",
     "This is our proposal for the default weight calculation alternative. Simply put, use PCA in order to reduce the number of dimensions of the problem. Fit a non penalized model using the PCA scores (taking advantage of being in a smaller dimension framework) and then project back into the original space. An in-depth explanation of this process can be read in our original [paper](https://link.springer.com/article/10.1007/s11634-020-00413-8). This can be easily done in the package by using the `WEIGHTS` class:\n",
     "\n",
+    "* `model='lm'`\n",
     "* `penalization=asgl`\n",
     "* `weight_technique='pca_pct'`. It refers to PCA percentage (because this technique is based on selecting a percentage of PCA components to fit the weights)\n",
     "* `lasso_power_weight=[0.6, 0.8, 1]`. This is the $\\gamma_1$ coefficient value. Default value for this parameter is `lasso_power_weight=1`\n",
@@ -700,25 +782,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Obtain weight values\n",
+    "model='lm'\n",
     "penalization = 'asgl'\n",
     "weight_technique = 'pca_pct'\n",
     "lasso_power_weight = [0.6, 0.8, 1]\n",
     "gl_power_weight = [0.6, 0.8, 1]\n",
     "variability_pct = 0.9\n",
     "\n",
-    "weights = asgl.WEIGHTS(penalization=penalization, weight_technique=weight_technique, lasso_power_weight=lasso_power_weight, \n",
+    "weights = asgl.WEIGHTS(model=model, penalization=penalization, weight_technique=weight_technique, lasso_power_weight=lasso_power_weight, \n",
     "                       gl_power_weight=gl_power_weight, variability_pct=variability_pct)\n",
     "lasso_weights, gl_weights = weights.fit(x, y, group_index=group_index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,6 +872,7 @@
     "\n",
     "Each PCA is built as a linear combination of the original variables. This means that another alternative for estimating the weights can be defined as simply using the weights from the first principal component as weights for the adaptive sparse group lasso model. This alternative produce worse results than the previous ones, but runs faster. In the same way, it is poosible to use the first PLS compponent to obtain weights\n",
     "\n",
+    "* `model='qr'`\n",
     "* `penalization=asgl`\n",
     "* `weight_technique='pca_1'`. It refers to using the first principal component.\n",
     "* `weight_technique='pls_1'`It refers to using the first PLS component.\n",
@@ -798,17 +882,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Obtain weight values\n",
+    "model='qr'\n",
     "penalization = 'asgl'\n",
     "weight_technique = 'pca_1'\n",
     "lasso_power_weight = [0.8, 1, 1.2]\n",
     "gl_power_weight = [0.8, 1, 1.2]\n",
     "\n",
-    "weights = asgl.WEIGHTS(penalization=penalization, weight_technique=weight_technique, \n",
+    "weights = asgl.WEIGHTS(model=model, penalization=penalization, weight_technique=weight_technique, \n",
     "                       lasso_power_weight=lasso_power_weight, gl_power_weight=gl_power_weight)\n",
     "lasso_weights, gl_weights = weights.fit(x, y, group_index=group_index)\n",
     "\n",
@@ -822,35 +907,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### LASSO\n",
+    "\n",
+    "Another alternative consists on running an initial lasso model, and use the estimates of this model as the initial weight for a second model\n",
+    "\n",
+    "* `model='lm'`\n",
+    "* `penalization=asgl`\n",
+    "* `weight_technique='lasso'`. It refers to using lasso to obtain the weights\n",
+    "* `lambda1_weights`. It is the $\\lambda$ value used in the lasso estimation of the weights.\n",
+    "* `lasso_power_weight=[0.8, 1, 1.2]`. As defined for PCA based on a subset of components.\n",
+    "* `gl_power_weight=[0.8, 1, 1.2]`. As defined for PCA based on a subset of components."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Obtain weight values\n",
+    "model='lm'\n",
+    "penalization = 'asgl'\n",
+    "weight_technique = 'lasso'\n",
+    "lasso_power_weight = [0.8, 1, 1.2]\n",
+    "gl_power_weight = [0.8, 1, 1.2]\n",
+    "lambda1_weights = 1e-2\n",
+    "\n",
+    "weights = asgl.WEIGHTS(model=model, penalization=penalization, weight_technique=weight_technique, lasso_power_weight=lasso_power_weight,\n",
+    "                     gl_power_weight=gl_power_weight, lambda1_weights=lambda1_weights)\n",
+    "lasso_weights, gl_weights = weights.fit(x, y, group_index=group_index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Unpenalized model\n",
     "\n",
     "This alternative can only be used when dealing with a low dimensional dataset (in which the number of observations is larger than the number of variables). In this case, it is possible to fit an initial model with no penalization, and then use this as weights for an adaptive model. We consider two alternatives. An unpenalized linear model and unpenalized quantile regression model.\n",
     "\n",
+    "* `model='qr'`\n",
     "* `penalization=asgl`\n",
-    "* `weight_technique='unpenalized_lm'`. It refers to using an unpenalized linear model.\n",
-    "* `weight_technique='unpenalized_qr'`It refers to using an unpenalized quantile regression model.\n",
+    "* `weight_technique='unpenalized'`. It refers to using an unpenalized model.\n",
     "* `lasso_power_weight=[0.8, 1, 1.2]`. As defined for PCA based on a subset of components.\n",
     "* `gl_power_weight=[0.8, 1, 1.2]`. As defined for PCA based on a subset of components.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Obtain weight values\n",
+    "model='qr'\n",
     "penalization = 'asgl'\n",
-    "weight_technique = 'unpenalized_lm'\n",
+    "weight_technique = 'unpenalized'\n",
     "lasso_power_weight = [0.8, 1, 1.2]\n",
     "gl_power_weight = [0.8, 1, 1.2]\n",
     "\n",
-    "weights = asgl.WEIGHTS(penalization=penalization, weight_technique=weight_technique, lasso_power_weight=lasso_power_weight,\n",
+    "weights = asgl.WEIGHTS(model=model, penalization=penalization, weight_technique=weight_technique, lasso_power_weight=lasso_power_weight,\n",
     "                     gl_power_weight=gl_power_weight)\n",
     "lasso_weights, gl_weights = weights.fit(x, y, group_index=group_index)\n",
     "\n",
-    "weight_technique = 'unpenalized_qr'\n",
-    "weights_qr = asgl.WEIGHTS(penalization=penalization, weight_technique=weight_technique, lasso_power_weight=lasso_power_weight,\n",
+    "model='lm'\n",
+    "weights_qr = asgl.WEIGHTS(model=model, penalization=penalization, weight_technique=weight_technique, lasso_power_weight=lasso_power_weight,\n",
     "                     gl_power_weight=gl_power_weight)\n",
     "lasso_weights, gl_weights = weights_qr.fit(x, y, group_index=group_index)"
    ]
@@ -962,7 +1083,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
