Added GroupKFold in the cross validation process

--- a/user_guide.ipynb
+++ b/user_guide.ipynb
@@ -1002,7 +1002,7 @@
    "source": [
     "## Main functions on the package\n",
     "\n",
-    "There are three main functions in this package:\n"
+    "There are four main functions in this package:\n"
    ]
   },
   {
@@ -1010,7 +1010,7 @@
    "metadata": {},
    "source": [
     "### `asgl.ASGL.fit`\n",
-    "This function is used for fitting any model (unpenalized or penalized) on a dataset. Input parameter values of this function are:\n",
+    "This function is used for fitting any model (unpenalized or penalized) on a dataset. This function is included inside the `ASGL` class object, whose parameters are:\n",
     "\n",
     "* `model`: model to be fit (accepts `'lm'` or `'qr'`)\n",
     "* `penalization`: penalization to use (accepts `None`, `'lasso'`, `'gl'`, `'sgl'`, `'asgl'`, `'asgl_lasso'`, `'asgl_gl'`)\n",
@@ -1024,7 +1024,12 @@
     "* `parallel`: boolean, wheter to execute the code in parallel or sequentially\n",
     "* `num_cores`: if parallel is set to true, the number of cores to use in the execution. Default is (max - 1)\n",
     "* `solver`: solver to be used by CVXPY. Default uses optimal alternative depending on the problem\n",
-    "* `max_iters`: CVXPY parameter. Default is 500\n"
+    "* `max_iters`: CVXPY parameter. Default is 500\n",
+    "\n",
+    "The function itself requires (in adition to the class object input parameters), the following input:\n",
+    "* `x`: A covariates data matrix\n",
+    "* `y`: A response vector\n",
+    "* `group_index`: The group structure (required only if a group based penalization is going to be used)\n"
    ]
   },
   {
@@ -1033,18 +1038,23 @@
    "source": [
     "### `asgl.WEIGHTS.fit`\n",
     "\n",
-    "This function is used for fitting weights used later by adaptive penalizations. Input parameter values of this function are:\n",
+    "This function is used for fitting weights used later by adaptive penalizations. This function is included inside the `WEIGHTS` class object, whose input parameter values of this function are:\n",
     "\n",
     "* `model`: model to be fit using these weights (accepts `'lm'` or `'qr'`)\n",
     "* `penalization`: penalization to use (`'asgl'`, `'asgl_lasso'`, `'asgl_gl'`)\n",
     "* `tau`: quantile level in quantile regression models\n",
-    "* `weight_technique`: weight technique to use for fitting the adaptive weights. Accepts `'pca_1'`, `'pca_pct'`, `'pls_1'`, `'pls_pct'`, `'unpenalized_lm'`, `'unpenalized_qr'`, `'spca'`\n",
+    "* `weight_technique`: weight technique to use for fitting the adaptive weights. Accepts `'pca_1'`, `'pca_pct'`, `'pls_1'`, `'pls_pct'`, `'unpenalized'`, `'spca'`\n",
     "* `weight_tol`: Tolerance value used for avoiding ZeroDivision errors\n",
     "* `lasso_power_weight`: parameter value, power at which the lasso weights are risen. Default is 1\n",
     "* `gl_power_weight`: parameter value, power at which the group lasso weights are risen. Default is 1\n",
     "* `variability_pct`: parameter value, percentage of variability explained by pca or pls components used in `'pca_pct'`, `'pls_pct'` and `'spca'`. Default is 0.9 (90%)\n",
     "* `spca_alpha`: sparse PCA parameter. Default is $10^{-5}$\n",
-    "* `spca_ridge_alpha`: sparse PCA parameter. Default is $10^{-2}$"
+    "* `spca_ridge_alpha`: sparse PCA parameter. Default is $10^{-2}$\n",
+    "\n",
+    "The function itself requires (in adition to the class object input parameters), the following input:\n",
+    "* `x`: A covariates data matrix\n",
+    "* `y`: A response vector\n",
+    "* `group_index`: The group structure (required only if a group based penalization is going to be used)"
    ]
   },
   {
@@ -1053,7 +1063,7 @@
    "source": [
     "### `asgl.CV.cross_validation`\n",
     "\n",
-    "This function performs cross validation over a dataset in order to obtain optimal parameter values for a model. Input parameter values of this function are:\n",
+    "This function performs cross validation over a dataset in order to obtain optimal parameter values for a model. This function is part of the `CV` clas object whose input parameter values of this function are:\n",
     "\n",
     "* All the parameters described for `asgl.ASGL.fit` and `asgl.WEIGHTS.fit` methods\n",
     "* `error_type`: error measurement to use. Accepts:\n",
@@ -1063,8 +1073,40 @@
     "   * `'QRE'`: quantile regression error\n",
     "* `random_state`: random state value in case reproducible data splits are required\n",
     "* `nfolds`: number of folds in which the dataset should be split. Default value is 5\n",
+    "\n",
+    "The function itself requires (in adition to the class object input parameters), the following input:\n",
+    "* `x`: A covariates data matrix\n",
+    "* `y`: A response vector\n",
+    "* `group_index`: The group structure (required only if a group based penalization is going to be used)\n",
+    "* `split_index`: Default is `None`. A parameter containing a group structure used in the splitting process of the data and used only if `GroupKFold` is required. \n",
     "\n"
    ]
+  },
+  {
+   "source": [
+    "### `asgl.TVT.train_validate_test`\n",
+    "\n",
+    "This function performs cross validation over a dataset in order to obtain optimal parameter values for a model. This function is part of the `TVT` clas object whose input parameter values of this function are:\n",
+    "\n",
+    "* All the parameters described for `asgl.ASGL.fit` and `asgl.WEIGHTS.fit` methods\n",
+    "* `error_type`: error measurement to use. Accepts:\n",
+    "   * `'MSE'`: mean squared error\n",
+    "   * `'MAE'`: mean absolute error\n",
+    "   * `'MDAE'`: mean absolute deviation error\n",
+    "   * `'QRE'`: quantile regression error\n",
+    "* `random_state`: random state value in case reproducible data splits are required\n",
+    "* `train_pct`: Default$=0.05$. Percentage of data used in the training process.\n",
+    "* `train_size`: Default is `None`. Number of observations used in the tranining process. This parameter overrides `train_pct`\n",
+    "* `validate_pct`: Default$=0.05$. Percentage of data used in the validation process.\n",
+    "* `validate_size`: Default is `None`. Number of observations used in the tranining process. This parameter overrides `validate_pct`\n",
+    "\n",
+    "The function itself requires (in adition to the class object input parameters), the following input:\n",
+    "* `x`: A covariates data matrix\n",
+    "* `y`: A response vector\n",
+    "* `group_index`: The group structure (required only if a group based penalization is going to be used) "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -1083,7 +1125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
